update home page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,28 +16,20 @@
     <body>
 
         <div class="site">
+
           <div class="header">
             <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-            <!--
-            <a class="extra" href="/">home</a>
-            -->
+
           </div>
 
           <h1>The Bento-dev project in few words</h1>
+
           <p>
           The present project aims to gather developers interested in creating a gui software to ease the configuration of the different parts in an Openbox only desktop environment.
           </p>
 
           <p>
-          Bento is a distribution built on Ubuntu LTS, around the Openbox window manager and a few more components meant to form an easy and light environment for all users.
-          </p>
-
-          <p>
-          In order to pursue the aim of making it an easy almost-a-desktop environment we need to create a graphical user interface for an easy configuration of each part.
-          </p>
-
-          <p>
-          The resulting project should be available for all users who wish to setup their own Openbox environment, in any distribution
+          Bento is an Ubuntu Openbox Remix easy to use, built with programs allowing to make it look like a full fledged desktop, while lighter. It comes with the desired programs for the everyday use, Office, Multimedia, and Internet, and additional tools for the more advanced users.
           </p>
 
           {{ content }}
